--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.166.1/containers/javascript-node-mongo
 // Update the VARIANT arg in docker-compose.yml to pick a Node.js version: 10, 12, 14
 {
-	"name": "Node.js & Mongo DB",
+	"name": "The One Container",
 	"dockerComposeFile": "docker-compose.yml",
 	"service": "app",
 	"workspaceFolder": "/workspace",
@@ -42,5 +42,31 @@
 	// "postCreateCommand": "yarn install",
 
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "node"
+	"remoteUser": "node",
+	"portsAttributes": {
+		"9000": {
+			"label": "Authentication"
+		},
+		"9001": {
+			"label": "Functions"
+		},
+		"9002": {
+			"label": "Firestore"
+		},
+		"9003": {
+			"label": "Database"
+		},
+		"9004": {
+			"label": "Hosting"
+		},
+		"9005": {
+			"label": "Pub/Sub"
+		},
+		"9006": {
+			"label": "Storage"
+		},
+		"9090": {
+			"label": "Emulator UI"
+		}
+	}
 }
