--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -33,8 +33,8 @@
 		"esbenp.prettier-vscode",
 		"ms-python.python",
 		"zxh404.vscode-proto3",
-		"ritwickdey.liveserver"
-	],
+		"ritwickdey.liveserver",
+		"pnp.polacode"
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	"forwardPorts": [3000, 27017],
