minor changes to the container based on other applications

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.166.1/containers/javascript-node-mongo
 // Update the VARIANT arg in docker-compose.yml to pick a Node.js version: 10, 12, 14
 {
-	"name": "The One Container",
+	"name": "Whats The Score",
 	"dockerComposeFile": "docker-compose.yml",
 	"service": "app",
 	"workspaceFolder": "/workspace",
@@ -33,11 +33,13 @@
 		"esbenp.prettier-vscode",
 		"ms-python.python",
 		"zxh404.vscode-proto3",
-		"ritwickdey.liveserver",
-		"pnp.polacode"
+		"ritwickdey.liveserver"
+	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [3000, 27017],
+	"forwardPorts": [
+		3000, 27017, 4200, 9000, 9001, 9002, 9003, 9004, 9005, 9006, 9090
+	],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "yarn install",
@@ -45,6 +47,9 @@
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "node",
 	"portsAttributes": {
+		"4200": {
+			"label": "AngularUI"
+		},
 		"9000": {
 			"label": "Authentication"
 		},
